# CPSC424

./: CMakeLists.txt
homework1/: .gitignore  10_matrixmult_parallelinout.cpp  1_matrixmult_naive.cpp  1a_matrixmult_parallelized.cpp  2_matrixmult_vectorization.cpp  3_matrixmult_kernel.cpp  4_matrixmult_blocking.cpp  5_matrixmult_parallel_blocking.cpp  6_matrixmult_fastio.cpp  7_matrixmult_array.cpp  8a_matrixmult_fastkernel.cpp  8b_matrixmult_fastkernel_fastoutput.cpp  9_matrixmult_fastinout.cpp  matrixmult.cpp  run_cmd_tests.py  run_test.py
homework3/: 0-pl-openmp-sequential.cpp  1-pl-openmp-naive.cpp  2-pl-openmp-optimized-algo.cpp  3-pl-openmp-further-optimize-algo.cpp  4-pl-openmp-optimize-v2.cpp  5-pl-openmp-optimize-v3.cpp  6-pl-openmp-simple-vectorize.cpp  a1-memory-bw.cpp  a2-memory-latency.cpp  pl-openmp-test.py  print_access_pattern.py
